infra/cdk/cdk.out/WidgetgridProdGatewayStack.template.json
{
 "Resources": {
  "Vpc8378EB38": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "WidgetgridProdGatewayStack/Vpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "WidgetgridProdGatewayStack/Vpc/Resource"
   }
  },
  "VpcpublicSubnet1Subnet2BB74ED7": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "10.0.0.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "WidgetgridProdGatewayStack/Vpc/publicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "WidgetgridProdGatewayStack/Vpc/publicSubnet1/Subnet"
   }
  },
  "VpcpublicSubnet1RouteTable15C15F8E": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "WidgetgridProdGatewayStack/Vpc/publicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "WidgetgridProdGatewayStack/Vpc/publicSubnet1/RouteTable"
   }
  },
  "VpcpublicSubnet1RouteTableAssociation4E83B6E4": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcpublicSubnet1RouteTable15C15F8E"
    },
    "SubnetId": {
     "Ref": "VpcpublicSubnet1Subnet2BB74ED7"
    }
   },
   "Metadata": {
    "aws:cdk:path": "WidgetgridProdGatewayStack/Vpc/publicSubnet1/RouteTableAssociation"
   }
  },
  "VpcpublicSubnet1DefaultRouteB88F9E93": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "VpcIGWD7BA715C"
    },
    "RouteTableId": {
     "Ref": "VpcpublicSubnet1RouteTable15C15F8E"
    }
   },
   "DependsOn": [
    "VpcVPCGWBF912B6E"
   ],
   "Metadata": {
    "aws:cdk:path": "WidgetgridProdGatewayStack/Vpc/publicSubnet1/DefaultRoute"
   }
  },
  "VpcpublicSubnet1EIP411541E6": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "WidgetgridProdGatewayStack/Vpc/publicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "WidgetgridProdGatewayStack/Vpc/publicSubnet1/EIP"
   }
  },
  "VpcpublicSubnet1NATGatewayA036E8A6": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "VpcpublicSubnet1EIP411541E6",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "VpcpublicSubnet1Subnet2BB74ED7"
    },
    "Tags": [
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "WidgetgridProdGatewayStack/Vpc/publicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "VpcpublicSubnet1DefaultRouteB88F9E93",
    "VpcpublicSubnet1RouteTableAssociation4E83B6E4"
   ],
   "Metadata": {
    "aws:cdk:path": "WidgetgridProdGatewayStack/Vpc/publicSubnet1/NATGateway"
   }
  },
  "VpcpublicSubnet2SubnetE34B022A": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1b",
    "CidrBlock": "10.0.1.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "WidgetgridProdGatewayStack/Vpc/publicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "WidgetgridProdGatewayStack/Vpc/publicSubnet2/Subnet"
   }
  },
  "VpcpublicSubnet2RouteTableC5A6DF77": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "WidgetgridProdGatewayStack/Vpc/publicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "WidgetgridProdGatewayStack/Vpc/publicSubnet2/RouteTable"
   }
  },
  "VpcpublicSubnet2RouteTableAssociationCCE257FF": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcpublicSubnet2RouteTableC5A6DF77"
    },
    "SubnetId": {
     "Ref": "VpcpublicSubnet2SubnetE34B022A"
    }
   },
   "Metadata": {
    "aws:cdk:path": "WidgetgridProdGatewayStack/Vpc/publicSubnet2/RouteTableAssociation"
   }
  },
  "VpcpublicSubnet2DefaultRoute732F0BEB": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "VpcIGWD7BA715C"
    },
    "RouteTableId": {
     "Ref": "VpcpublicSubnet2RouteTableC5A6DF77"
    }
   },
   "DependsOn": [
    "VpcVPCGWBF912B6E"
   ],
   "Metadata": {
    "aws:cdk:path": "WidgetgridProdGatewayStack/Vpc/publicSubnet2/DefaultRoute"
   }
  },
  "VpcprivateSubnet1SubnetCEAD3716": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "10.0.2.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "kubernetes.io/role/internal-elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "WidgetgridProdGatewayStack/Vpc/privateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "WidgetgridProdGatewayStack/Vpc/privateSubnet1/Subnet"
   }
  },
  "VpcprivateSubnet1RouteTable1979EACB": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "kubernetes.io/role/internal-elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "WidgetgridProdGatewayStack/Vpc/privateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "WidgetgridProdGatewayStack/Vpc/privateSubnet1/RouteTable"
   }
  },
  "VpcprivateSubnet1RouteTableAssociationEEBD93CE": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcprivateSubnet1RouteTable1979EACB"
    },
    "SubnetId": {
     "Ref": "VpcprivateSubnet1SubnetCEAD3716"
    }
   },
   "Metadata": {
    "aws:cdk:path": "WidgetgridProdGatewayStack/Vpc/privateSubnet1/RouteTableAssociation"
   }
  },
  "VpcprivateSubnet1DefaultRouteB506891A": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "VpcpublicSubnet1NATGatewayA036E8A6"
    },
    "RouteTableId": {
     "Ref": "VpcprivateSubnet1RouteTable1979EACB"
    }
   },
   "Metadata": {
    "aws:cdk:path": "WidgetgridProdGatewayStack/Vpc/privateSubnet1/DefaultRoute"
   }
  },
  "VpcprivateSubnet2Subnet2DE7549C": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1b",
    "CidrBlock": "10.0.3.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "kubernetes.io/role/internal-elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "WidgetgridProdGatewayStack/Vpc/privateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "WidgetgridProdGatewayStack/Vpc/privateSubnet2/Subnet"
   }
  },
  "VpcprivateSubnet2RouteTable4D0FFC8C": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "kubernetes.io/role/internal-elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "WidgetgridProdGatewayStack/Vpc/privateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "WidgetgridProdGatewayStack/Vpc/privateSubnet2/RouteTable"
   }
  },
  "VpcprivateSubnet2RouteTableAssociationB691E645": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcprivateSubnet2RouteTable4D0FFC8C"
    },
    "SubnetId": {
     "Ref": "VpcprivateSubnet2Subnet2DE7549C"
    }
   },
   "Metadata": {
    "aws:cdk:path": "WidgetgridProdGatewayStack/Vpc/privateSubnet2/RouteTableAssociation"
   }
  },
  "VpcprivateSubnet2DefaultRouteBAC3C1C3": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "VpcpublicSubnet1NATGatewayA036E8A6"
    },
    "RouteTableId": {
     "Ref": "VpcprivateSubnet2RouteTable4D0FFC8C"
    }
   },
   "Metadata": {
    "aws:cdk:path": "WidgetgridProdGatewayStack/Vpc/privateSubnet2/DefaultRoute"
   }
  },
  "VpcIGWD7BA715C": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "WidgetgridProdGatewayStack/Vpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "WidgetgridProdGatewayStack/Vpc/IGW"
   }
  },
  "VpcVPCGWBF912B6E": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "VpcIGWD7BA715C"
    },
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "WidgetgridProdGatewayStack/Vpc/VPCGW"
   }
  },
  "Alb16C2F182": {
   "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
   "Properties": {
    "LoadBalancerAttributes": [
     {
      "Key": "deletion_protection.enabled",
      "Value": "false"
     }
    ],
    "Scheme": "internet-facing",
    "SecurityGroups": [
     {
      "Fn::GetAtt": [
       "AlbSecurityGroup580F65A6",
       "GroupId"
      ]
     }
    ],
    "Subnets": [
     {
      "Ref": "VpcpublicSubnet1Subnet2BB74ED7"
     },
     {
      "Ref": "VpcpublicSubnet2SubnetE34B022A"
     }
    ],
    "Type": "application"
   },
   "DependsOn": [
    "VpcpublicSubnet1DefaultRouteB88F9E93",
    "VpcpublicSubnet1RouteTableAssociation4E83B6E4",
    "VpcpublicSubnet2DefaultRoute732F0BEB",
    "VpcpublicSubnet2RouteTableAssociationCCE257FF"
   ],
   "Metadata": {
    "aws:cdk:path": "WidgetgridProdGatewayStack/Alb/Resource"
   }
  },
  "AlbSecurityGroup580F65A6": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Automatically created Security Group for ELB WidgetgridProdGatewayStackAlb3B419454",
    "SecurityGroupEgress": [
     {
      "CidrIp": {
       "Fn::GetAtt": [
        "Vpc8378EB38",
        "CidrBlock"
       ]
      },
      "Description": "ALB to envoy-gateway NodePort on any node in the VPC",
      "FromPort": 30080,
      "IpProtocol": "tcp",
      "ToPort": 30080
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow from anyone on port 80",
      "FromPort": 80,
      "IpProtocol": "tcp",
      "ToPort": 80
     },
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow from anyone on port 443",
      "FromPort": 443,
      "IpProtocol": "tcp",
      "ToPort": 443
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "WidgetgridProdGatewayStack/Alb/SecurityGroup/Resource"
   }
  },
  "AlbRedirect80To443C790C012": {
   "Type": "AWS::ElasticLoadBalancingV2::Listener",
   "Properties": {
    "DefaultActions": [
     {
      "RedirectConfig": {
       "Port": "443",
       "Protocol": "HTTPS",
       "StatusCode": "HTTP_301"
      },
      "Type": "redirect"
     }
    ],
    "LoadBalancerArn": {
     "Ref": "Alb16C2F182"
    },
    "Port": 80,
    "Protocol": "HTTP"
   },
   "Metadata": {
    "aws:cdk:path": "WidgetgridProdGatewayStack/Alb/Redirect80To443/Resource"
   }
  },
  "AlbHttpsListener2ADA614F": {
   "Type": "AWS::ElasticLoadBalancingV2::Listener",
   "Properties": {
    "Certificates": [
     {
      "CertificateArn": {
       "Ref": "ProdCertificate599421AF"
      }
     }
    ],
    "DefaultActions": [
     {
      "FixedResponseConfig": {
       "ContentType": "text/plain",
       "MessageBody": "widgetgrid prod -- nothing deployed here yet",
       "StatusCode": "200"
      },
      "Type": "fixed-response"
     }
    ],
    "LoadBalancerArn": {
     "Ref": "Alb16C2F182"
    },
    "Port": 443,
    "Protocol": "HTTPS"
   },
   "Metadata": {
    "aws:cdk:path": "WidgetgridProdGatewayStack/Alb/HttpsListener/Resource"
   }
  },
  "AlbHttpsListenerApexRedirectRuleDA61FC54": {
   "Type": "AWS::ElasticLoadBalancingV2::ListenerRule",
   "Properties": {
    "Actions": [
     {
      "RedirectConfig": {
       "Host": "www.pie-laboratories.com",
       "StatusCode": "HTTP_301"
      },
      "Type": "redirect"
     }
    ],
    "Conditions": [
     {
      "Field": "host-header",
      "HostHeaderConfig": {
       "Values": [
        "pie-laboratories.com"
       ]
      }
     }
    ],
    "ListenerArn": {
     "Ref": "AlbHttpsListener2ADA614F"
    },
    "Priority": 1
   },
   "Metadata": {
    "aws:cdk:path": "WidgetgridProdGatewayStack/Alb/HttpsListener/ApexRedirectRule/Resource"
   }
  },
  "ProdAliasRecord73681B2D": {
   "Type": "AWS::Route53::RecordSet",
   "Properties": {
    "AliasTarget": {
     "DNSName": {
      "Fn::Join": [
       "",
       [
        "dualstack.",
        {
         "Fn::GetAtt": [
          "Alb16C2F182",
          "DNSName"
         ]
        }
       ]
      ]
     },
     "HostedZoneId": {
      "Fn::GetAtt": [
       "Alb16C2F182",
       "CanonicalHostedZoneID"
      ]
     }
    },
    "HostedZoneId": "Z0519890WM0HGBX8Z6QT",
    "Name": "www.pie-laboratories.com.",
    "Type": "A"
   },
   "Metadata": {
    "aws:cdk:path": "WidgetgridProdGatewayStack/ProdAliasRecord/Resource"
   }
  },
  "ApexAliasRecordCCE6BE0E": {
   "Type": "AWS::Route53::RecordSet",
   "Properties": {
    "AliasTarget": {
     "DNSName": {
      "Fn::Join": [
       "",
       [
        "dualstack.",
        {
         "Fn::GetAtt": [
          "Alb16C2F182",
          "DNSName"
         ]
        }
       ]
      ]
     },
     "HostedZoneId": {
      "Fn::GetAtt": [
       "Alb16C2F182",
       "CanonicalHostedZoneID"
      ]
     }
    },
    "HostedZoneId": "Z0519890WM0HGBX8Z6QT",
    "Name": "pie-laboratories.com.",
    "Type": "A"
   },
   "Metadata": {
    "aws:cdk:path": "WidgetgridProdGatewayStack/ApexAliasRecord/Resource"
   }
  },
  "ProdCertificate599421AF": {
   "Type": "AWS::CertificateManager::Certificate",
   "Properties": {
    "DomainName": "www.pie-laboratories.com",
    "DomainValidationOptions": [
     {
      "DomainName": "www.pie-laboratories.com",
      "HostedZoneId": "Z0519890WM0HGBX8Z6QT"
     },
     {
      "DomainName": "pie-laboratories.com",
      "HostedZoneId": "Z0519890WM0HGBX8Z6QT"
     }
    ],
    "SubjectAlternativeNames": [
     "pie-laboratories.com"
    ],
    "Tags": [
     {
      "Key": "Name",
      "Value": "WidgetgridProdGatewayStack/ProdCertificate"
     }
    ],
    "ValidationMethod": "DNS"
   },
   "Metadata": {
    "aws:cdk:path": "WidgetgridProdGatewayStack/ProdCertificate/Resource"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/21QTWvCQBD9Ld7XrU1r76mICKUNSfFaJpPRjq67YXdWkZD/XhKtSaGneV8MbybRyctczyZwDlOsDlPDpW4KATwoOIevhjDRzaZGtdjaTbZQWSwNYxFLS9JpA8pdFPqE0tCgD1oagkMGYWfv4Q4s11k33kFWIHSGi8o8n0BoWLy2Qt7SPXBtcmOpCOD3kayogjB6lsvKu1j3HcZCq8hAEEbjoCrBgEW2u1Oim7SuDWNf7c1B9dp75LsNf/g4x0HI3jK/+B8/j9dvjHmrfHf8/Ek3aU7ofNU/pEcFSauQvPC220RHsLAjr5vFoHXpEW1blVNw0WPvfESpo7TKuor0PjyckmedPOrZZB+Ypz5a4SPp/Dp/ACtDyqX9AQAA"
   },
   "Metadata": {
    "aws:cdk:path": "WidgetgridProdGatewayStack/CDKMetadata/Default"
   }
  }
 },
 "Outputs": {
  "ProdUrl": {
   "Value": "https://www.pie-laboratories.com"
  },
  "ExportsOutputRefVpc8378EB38272D6E3A": {
   "Value": {
    "Ref": "Vpc8378EB38"
   },
   "Export": {
    "Name": "WidgetgridProdGatewayStack:ExportsOutputRefVpc8378EB38272D6E3A"
   }
  },
  "ExportsOutputRefVpcprivateSubnet1SubnetCEAD37168693D373": {
   "Value": {
    "Ref": "VpcprivateSubnet1SubnetCEAD3716"
   },
   "Export": {
    "Name": "WidgetgridProdGatewayStack:ExportsOutputRefVpcprivateSubnet1SubnetCEAD37168693D373"
   }
  },
  "ExportsOutputRefVpcprivateSubnet2Subnet2DE7549CDF5ACE3D": {
   "Value": {
    "Ref": "VpcprivateSubnet2Subnet2DE7549C"
   },
   "Export": {
    "Name": "WidgetgridProdGatewayStack:ExportsOutputRefVpcprivateSubnet2Subnet2DE7549CDF5ACE3D"
   }
  },
  "ExportsOutputFnGetAttAlbSecurityGroup580F65A6GroupId37F3639D": {
   "Value": {
    "Fn::GetAtt": [
     "AlbSecurityGroup580F65A6",
     "GroupId"
    ]
   },
   "Export": {
    "Name": "WidgetgridProdGatewayStack:ExportsOutputFnGetAttAlbSecurityGroup580F65A6GroupId37F3639D"
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
